--- a/app/src/main/res/layout/activity_profile_screen.xml
+++ b/app/src/main/res/layout/activity_profile_screen.xml
@@ -228,7 +228,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvCorrectAnswer"
+                android:id="@+id/tvCorrectAnswerDialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
