--- a/app/src/main/res/layout/activity_profile_screen.xml
+++ b/app/src/main/res/layout/activity_profile_screen.xml
@@ -182,6 +182,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/puzzleDataLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_20sdp"
@@ -212,6 +213,32 @@
 
             <TextView
                 android:id="@+id/tvCompletedLevelsData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:text="0"
+                android:textColor="#1BA5FF"
+                android:textSize="@dimen/_21ssp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvAnswerQ"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/tvAnswerQ"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_21ssp" />
+
+            <TextView
+                android:id="@+id/tvAnswerQData"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -276,5 +303,7 @@
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+<!--
+The number of riddles answered
+-->
 </ScrollView>
